<resources>
    <string name="app_name">LoyalFans</string>
    <string name="internet_error">Seems you\'re not connected with internet</string>
    <string name="hint_email_phone">Username or Email address</string>
    <string name="sign_in">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot your login details ?</string>
    <string name="or">or</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="your_name">Your name</string>
    <string name="e_mail_address">Email address</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="this_is_test_post_thanks_for_following_me_on_loyal_fans_this_is_test_fully_test">This is test post, Thanks for following me on loyal fans This is test fully test.</string>
    <string name="_23_likes">23 Likes</string>
    <string name="comments"> Comments</string>
    <string name="send_tip">Send Tip</string>
    <string name="send">send</string>
    <string name="enter_tip_amount">Enter Tip Amount</string>
    <string name="dollar">$</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="akash_2621">akash_2621</string>
    <string name="notifications">Notifications</string>
    <string name="security">Security</string>
    <string name="your_cards_to_subscribe">Your Cards</string>
    <string name="add_bank_to_earn">Add Bank</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="recent_search">Recent Search</string>
    <string name="henry_mark" />
    <string name="henry_mark_name" />
    <string name="select_media_files">Please select media files</string>
    <string name="permission_error">Permission must be granted in order to access</string>
    <string name="write_something">Write Something</string>
    <string name="post">post</string>
    <string name="send_ppv">send ppv</string>
    <string name="add_post">Add Post</string>
    <string name="media_selection">Media Selection</string>
    <string name="fans">Fans</string>
    <string name="following">Following</string>
    <string name="favorites">Favorites</string>
    <string name="_0">0</string>
    <string name="profile_post">POST</string>
    <string name="profile_image">IMAGE</string>
    <string name="profile_video">VIDEO</string>
    <string name="lorem_ipsum_ipsum_ipsu_ipsum_ipsum_ipsum_m_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum">
    lorem_ipsum_ipsum_ipsu_ipsum_ipsum_ipsum_m_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum_ipsum
    </string>
    <string name="till_20_sep_2020" />
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="unblock_message">Are you sure want to unblock this contact?</string>
    <string name="block_message">Are you sure want to block this contact?</string>
    <string name="blocked_users">Blocked users</string>
    <string name="blocked">BLOCKED</string>
    <string name="active">ACTIVE</string>
    <string name="expired">EXPIRED</string>
    <string name="all">ALL</string>
    <string name="current_password">current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="user_name">User Name</string>
    <string name="display_name">Display Name</string>
    <string name="subscription_duration">Subscription Duration</string>
    <string name="about">About</string>
    <string name="website_url">Website Url</string>
    <string name="location">Location</string>
    <string name="save_change">Save Changes</string>
    <string name="upload_profile_image">upload profile image</string>
    <string name="upload_cover_image">Upload cover image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="subscription_plan">Custom pay</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="receive_site_notifications_about">Receive Site Notifications About</string>
    <string name="new_comment">New Comment</string>
    <string name="show_activity_status">Show Activity Status</string>
    <string name="show_subscriptions_offers">Show Subscriptions Offers</string>
    <string name="profile_privacy">Profile Privacy</string>
    <string name="nobody">Nobody</string>
    <string name="mutual_friends">Mutual Friends</string>
    <string name="subscribe">Subscribe</string>
    <string name="back_press_message">Please press back again to exit</string>
    <string name="billing_details">Billing Details</string>
    <string name="we_are_fully_complaint_with_payment_card_industry_data_security_standards">We Are Fully Complaint With Payment Card Industry Data Security Standards.</string>
    <string name="street">STREET*</string>
    <string name="city">CITY*</string>
    <string name="state">STATE/PROVINCE*</string>
    <string name="zip_postal_code">ZIP POSTAL CODE</string>
    <string name="country">COUNTRY*</string>
    <string name="email">EMAIL*</string>
    <string name="name_in_card">Name in the card*</string>
    <string name="card_number">Card Number</string>
    <string name="street_hint">STREET</string>
    <string name="city_hint">CITY</string>
    <string name="state_hint">STATE/PROVINCE</string>
    <string name="zip_postal_code_hint">ZIP POSTAL CODE</string>
    <string name="country_hint">COUNTRY</string>
    <string name="email_hint">EMAIL</string>
    <string name="card_details">Card Details</string>
    <string name="name_in_card_hint">Name On The Card</string>
    <string name="card_number_hint">Card Number</string>
    <string name="expiration_mm_yyyy">Expiration</string>
    <string name="submit">submit</string>
    <string name="cvc">CVC</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="add_card">Add Card</string>
    <string name="banking">Banking</string>
    <string name="banking_to_earn">Add Bank [To Earn]</string>
    <string name="personal_info">Personal Information</string>
    <string name="fill_detail">Fill in your legal name, Address and attach your government issued Picture ID.</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="zip_code">Zip Code</string>
    <string name="zip_code_hint">ZIP CODE</string>
    <string name="not_found">not_found</string>
    <string name="facebook_app_id">985578308583535</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="valid_email_username">Email/UserName is mandatory</string>
    <string name="username_validation">Username is mandatory</string>
    <string name="password_validation">Password is mandatory</string>
    <string name="attachment_validation">Attachment is required</string>
    <string name="content_validation">Content is mandatory</string>
    <string name="current_password_validation">Current password required</string>
    <string name="current_password_not_match_validation">Current password not match</string>
    <string name="new_password_validation">New password required</string>
    <string name="confirm_password_validation">Confirm password required</string>
    <string name="confirm_new_password_validation">New password and confirm password should be same</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_post">Edit Post</string>
    <string name="display_text_Validation">Display name is required</string>
    <string name="about_Validation">About is required</string>
    <string name="username_Validation">Username is required</string>
    <string name="location_Validation">Location is required</string>
    <string name="website_Validation">Website URL is required</string>
    <string name="add_edit_subscription">Add/Edit Custom pay</string>
    <string name="_1_month">1 month</string>
    <string name="_3_month">3 month</string>
    <string name="_6_month">6 month</string>
    <string name="_12_month">12 month</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="update">Update</string>
    <string name="ppv_send">PPV Send</string>
    <string name="ppv_history">PPV History</string>
    <string name="profile_caps">PROFILE</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="my_message">MY MESSAGE</string>
    <string name="other_message">OTHER MESSAGE</string>
    <string name="all_subscribers">All Subscribers</string>
    <string name="total_purchases">Total Purchases:\ </string>
    <string name="seen">Seen :</string>
    <string name="send_ppv_message">Send PPV Message</string>
    <string name="search_result">Search Result</string>
    <string name="suggestion_for_you">Suggestion For You</string>
    <string name="write_comment">Write a Comment</string>
    <string name="reply">Reply</string>
    <string name="cancel_reply">Cancel Reply</string>
    <string name="add_comment_validation">Please add comment</string>
    <string name="comments_header">Comments</string>
    <string name="enter_tip_amount_validation">Please enter tip amount</string>
    <string name="no_data">No Data</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="request_cancel_subscribe">Requsted for cancel subscribe</string>
    <string name="phone">Phone*</string>
    <string name="phone_hint">PHONE</string>
    <string name="tax_id_or_social_security_number">Tax ID or Social Security Number*</string>
    <string name="ssn_hint">TAX ID OR SSN</string>
    <string name="usa">USA</string>
    <string name="us">US</string>
    <string name="state_province">State/Province*</string>
    <string name="state_province_hint">STATE/PROVINCE</string>
    <string name="select_document">SELECT DOCUMENTS*</string>
    <string name="select_document_hint">SELECT DOCUMENTS</string>
    <string name="choose_file">Choose File</string>
    <string name="unable_post_bank">Unable to add bank details</string>
    <string name="bank_details_added">Bank details added</string>
    <string name="firstname_bank">Please enter firstname</string>
    <string name="lastname_bank">Please enter lastname</string>
    <string name="phone_bank">Please enter phone</string>
    <string name="taxid_validation">Please enter taxID or SSN</string>
    <string name="id_expiration_date">Id Expiration Date</string>
    <string name="payment_history">Payment History</string>
    <string name="request_withdrawal">Request Withdrawal</string>
</resources>