<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp"
    android:paddingTop="@dimen/_5sdp"
    android:paddingEnd="@dimen/_10sdp">

    <include layout="@layout/layout_toolbar_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banking"
                android:textAllCaps="false"
                android:textColor="@color/black" />


            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/personal_info"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/fill_detail"
                android:textColor="@color/theme_black" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/first_name"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <EditText
                android:id="@+id/etFirstNameBank"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/first_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/last_name"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <EditText
                android:id="@+id/etLastNameBank"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/last_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <EditText
                android:id="@+id/etPhoneBank"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/phone_hint"
                android:importantForAutofill="no"
                android:inputType="phone"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/tax_id_or_social_security_number"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <EditText
                android:id="@+id/etTaxIDBank"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/ssn_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/country"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spCountryBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_round_border"
                android:hint="@string/state_province_hint"
                android:padding="0dp" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/street"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <EditText
                android:id="@+id/etStreetBank"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/street_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/state_province"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />


            <EditText
                android:id="@+id/etStateBank"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/state_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/city"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <EditText
                android:id="@+id/etCityBank"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/city_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/zip_code"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <EditText
                android:id="@+id/etZipCodeBank"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/zip_code_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/date_of_birth"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <Button
                android:id="@+id/btnDateOfBirth"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/date_of_birth"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/select_document"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spDocumentSelectionBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_round_border"
                android:padding="0dp" />

            <Button
                android:id="@+id/btnChooseSelfie"
                style="@style/BaseColorGradientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/choose_file" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_80sdp"
                android:contentDescription="@string/app_name"
                android:layerType="software"
                android:src="@drawable/photo_id_rules_selfie" />

            <Button
                android:id="@+id/btnChooseID"
                style="@style/BaseColorGradientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/choose_file" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_80sdp"
                android:contentDescription="@string/app_name"
                android:layerType="software"
                android:src="@drawable/photo_id_rules_id" />

            <TextView
                style="@style/BaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/id_expiration_date"
                android:textAllCaps="true"
                android:textColor="@color/theme_black" />

            <Button
                android:id="@+id/btnIDExpirationDate"
                style="@style/FullBorderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/id_expiration_date"
                tools:ignore="LabelFor" />


            <Button
                android:id="@+id/btnSubmitBankDetails"
                style="@style/BaseColorGradientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>