<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvUserNameMenu"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/akash_2621"
                android:textColor="@color/colorAccent" />

            <View
                android:id="@+id/viewTop"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tvUserNameMenu"
                android:background="@color/border_color" />

            <TextView
                android:id="@+id/tvProfileMenu"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewTop"
                android:onClick="onEditProfile"
                android:text="@string/profile" />

            <TextView
                android:id="@+id/tvNotification"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvProfileMenu"
                android:onClick="onNotificationSetting"
                android:text="@string/notifications" />

            <TextView
                android:id="@+id/tvSecurity"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNotification"
                android:onClick="onSecurity"
                android:text="@string/security" />

            <TextView
                android:id="@+id/tvPassword"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSecurity"
                android:onClick="onChangePassword"
                android:text="@string/password" />

            <TextView
                android:id="@+id/tvSubscriptionPlan"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPassword"
                android:onClick="onSubscriptionPlan"
                android:text="@string/subscription_plan"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvBlockedUser"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPassword"
                android:onClick="onBlockedUser"
                android:text="@string/blocked_users"/>

            <TextView
                android:id="@+id/tvYourCards"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBlockedUser"
                android:onClick="onAddCard"
                android:text="@string/your_cards_to_subscribe" />

            <TextView
                android:id="@+id/tvAddBank"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvYourCards"
                android:onClick="onBankAdd"
                android:text="@string/add_bank_to_earn" />

            <TextView
                android:id="@+id/tvPaymentHistory"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAddBank"
                android:onClick="onPaymentHistory"
                android:text="@string/payment_history" />

            <TextView
                android:id="@+id/tvStatements"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPaymentHistory"
                android:onClick="onStatements"
                android:text="@string/request_withdrawal" />

            <TextView
                android:id="@+id/tvHelpAndSupport"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvStatements"
                android:onClick="onHelpAndSupport"
                android:text="@string/help_amp_support" />

            <View
                android:id="@+id/viewBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/tvLogout"
                android:background="@color/border_color" />

            <TextView
                android:id="@+id/tvLogout"
                style="@style/SideMenuBaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:onClick="onLogout"
                android:text="@string/logout"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_5sdp"
                android:contentDescription="@string/app_name"
                android:onClick="onLogout"
                android:src="@mipmap/ic_logout" />

        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>