<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:gravity="center"
    android:orientation="horizontal">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/place_holder" />

    <LinearLayout
        android:id="@+id/profileAndCommentData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProfileName"
            style="@style/BaseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/henry_mark_name"
            android:textAllCaps="true"
            android:textColor="@color/theme_black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvUserName"
            style="@style/BaseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/henry_mark"
            android:textAllCaps="true"
            android:textColor="@color/theme_black"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSendTip"
        style="@style/BaseColorRoundedGradientButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:text="@string/send_tip"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imgMoreOption"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_more_option"
        android:visibility="gone" />

</LinearLayout>